kubernetes/services-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-pagamento
  labels:
    app: ms-pagamento
spec:
  selector:
    app: ms-pagamento
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
