kubernetes/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-pagamento
  labels:
    app: ms-pagamento
  annotations:
    # docs: https://github.com/kubernetes/ingress-nginx/blob/main/docs/examples/rewrite/README.md
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  # ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /ms-pagamento(/|$)(.*)
        backend:
          service:
            name: ms-pagamento
            port: 
              number: 80
